[package]
name = "zircon-hal-bare"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Zircon HAL implementation for bare metal environment."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "1.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.8"
