[package]
name = "zircon-loader"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Zircon user program (userboot) loader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
cfg-if = "1.0"
xmas-elf = "0.7"
zircon-object = { path = "../zircon-object", features = ["elf"] }
zircon-syscall = { path = "../zircon-syscall" }
kernel-hal = { path = "../kernel-hal" }

[features]
default = ["libos"]
libos = ["kernel-hal/libos", "zircon-object/aspace-separate", "zircon-syscall/std"]

[dev-dependencies]
env_logger = "0.9"
async-std = { version = "1.10", features = ["attributes"] }
