[package]
name = "zircon-object"
version = "0.1.0"
authors = [
    "Runji Wang <wangrunji0408@163.com>",
    "Qinglin Pan <panqinglin00@163.com>",
]
edition = "2018"
description = "Zircon kernel objects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
aspace-separate = []
elf = ["xmas-elf"]
#hypervisor = ["rvm"]

libos = [
    "kernel-hal/libos",
]

[dependencies]
bitflags.workspace = true
log.workspace = true
hashbrown.workspace = true
downcast-rs = { version = "1.2", default-features = false }
kernel-hal = { path = "../kernel-hal", default-features = false }
numeric-enum-macro = "0.2"
futures = { version = "0.3", default-features = false, features = [
    "alloc",
    "async-await",
] }
xmas-elf = { version = "0.7", optional = true }
region-alloc = { git = "https://github.com/KaminariOS/region-allocator"}
lazy_static = { version = "1.4", features = ["spin_no_std"] }
cfg-if.workspace = true
#rvm = { git = "https://github.com/rcore-os/RVM", rev = "382fc60", optional = true }
lock = { git = "https://github.com/DeathWish5/kernel-sync", rev = "8486b8" }

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes", "unstable"] }
