[package]
name = "zircon-syscall"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Zircon syscalls implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# hypervisor = ["zircon-object/hypervisor"]
deny-page-fault = []

[dependencies]
log = "0.4"
bitflags = "1.3"
numeric-enum-macro = "0.2"
zircon-object = { path = "../zircon-object" }
kernel-hal = { path = "../kernel-hal", default-features = false }
futures = { version = "0.3", default-features = false, features = [
    "alloc",
    "async-await",
] }
cfg-if = "1.0"
lock = { git = "https://github.com/DeathWish5/kernel-sync", rev = "766fbb5" }
