[package]
name = "zircon-userboot"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Zircon kernel module which loads the first user program 'userboot'."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
xmas-elf = "0.7"
zircon-object = { path = "../zircon-object" }
zircon-hal-unix = { path = "../zircon-hal-unix" }
